--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/IMG_2178.jpeg" alt="" />
 									</span>
 								</section>
 
@@ -251,4 +251,5 @@
 	</body>
 
 </html>
+
 
