--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 										</header>
 										<p>Put something here</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
+											<li><a href="#" class="button big">CV</a></li>
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/IMG_2178.jpeg" alt="" />
+										<img src="images/IMG_2178.jpeg" alt="Personal photo" />
 									</span>
 								</section>
 
@@ -251,5 +251,6 @@
 	</body>
 
 </html>
+
 
 
