--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="fa-brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+										<li><a href="#" class="fa-brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="#" class="fa-brands fa-bluesky"><span class="label">Bluesky</span></a></li>
 									</ul>
 								</header>
-
+							
 							<!-- Banner -->
 								<section id="banner">
 									<div class="content">
@@ -40,13 +41,13 @@
 											</h1>
 											<p>An academic portfolio</p>
 										</header>
-										<p>Put something here</p>
+										<p>replace with a bio?</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">CV</a></li>
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/IMG_2178.jpeg" alt="Personal photo" />
+										<img src="images/IMG_2784.JPG" alt="Personal photo" />
 									</span>
 								</section>
 
@@ -57,32 +58,88 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon fa-gem"></span>
+											<span class="fa-solid fa-dna"></span>
 											<div class="content">
-												<h3>Protocols</h3>
-												<p>Protocols for each experiment</p>
+												<h3>Evolution</h3>
+												<p>Experimental evolution after the loss of the Y chromosome in a population</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-paper-plane"></span>
+											<span class="fa-solid fa-desktop"></span>
 											<div class="content">
-												<h3>Code</h3>
+												<h3>Bioinformatics</h3>
 												<p>Replace</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-rocket"></span>
+											<span class="fa-solid fa-heart"></span>
 											<div class="content">
-												<h3>Experiments</h3>
+												<h3>Fertility</h3>
 												<p>Replace</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-signal"></span>
+											<span class="fa-solid fa-earth-americas"></span>
 											<div class="content">
-												<h3>Publications</h3>
+												<h3>Population genomics</h3>
 												<p>Replace</p>
 											</div>
+										</article>
+									</div>
+								</section>
+							<!-- Section -->
+								<section>
+									<header class="major">
+										<h2>Dissertation work</h2>
+									</header>
+									<div class="posts">
+										<article>
+											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<h3>Experiments</h3>
+											<p>Replace</p>
+											<ul class="actions">
+												<li><a href="#" class="button">More</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<h3>Protocols</h3>
+											<p>Replace</p>
+											<ul class="actions">
+												<li><a href="#" class="button">More</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<h3>Code</h3>
+											<p>replace</p>
+											<ul class="actions">
+												<li><a href="#" class="button">More</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<h3>Mentoring</h3>
+											<p>replace</p>
+											<ul class="actions">
+												<li><a href="#" class="button">More</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<h3>Publications</h3>
+											<p>replace</p>
+											<ul class="actions">
+												<li><a href="#" class="button">More</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<h3>Data Carpentries</h3>
+											<p></p>
+											<ul class="actions">
+												<li><a href="#" class="button">More</a></li>
+											</ul>
 										</article>
 									</div>
 								</section>
@@ -197,6 +254,7 @@
 	</body>
 
 </html>
+
 
 
 
