--- a/index.html
+++ b/index.html
@@ -58,28 +58,28 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="fa-solid fa-dna"></span>
+											<span class="image icon fa-dna"></span>
 											<div class="content">
 												<h3>Evolution</h3>
 												<p>Experimental evolution after the loss of the Y chromosome in a population</p>
 											</div>
 										</article>
 										<article>
-											<span class="fa-solid fa-desktop"></span>
+											<span class="image icon fa-desktop"></span>
 											<div class="content">
 												<h3>Bioinformatics</h3>
 												<p>Replace</p>
 											</div>
 										</article>
 										<article>
-											<span class="fa-solid fa-heart"></span>
+											<span class="image icon fa-heart"></span>
 											<div class="content">
 												<h3>Fertility</h3>
 												<p>Replace</p>
 											</div>
 										</article>
 										<article>
-											<span class="fa-solid fa-earth-americas"></span>
+											<span class="image icon fa-earth-americas"></span>
 											<div class="content">
 												<h3>Population genomics</h3>
 												<p>Replace</p>
@@ -87,66 +87,6 @@
 										</article>
 									</div>
 								</section>
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Dissertation work</h2>
-									</header>
-									<div class="posts">
-										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>Experiments</h3>
-											<p>Replace</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Protocols</h3>
-											<p>Replace</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<h3>Code</h3>
-											<p>replace</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>Mentoring</h3>
-											<p>replace</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3>Publications</h3>
-											<p>replace</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Data Carpentries</h3>
-											<p></p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-									</div>
-								</section>
-
-
-							
-
 						</div>
 					</div>
 
@@ -168,69 +108,39 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="generic.html">Projects</a></li>
 										<li>
-											<span class="opener">Submenu</span>
+											<span class="opener">Protocols</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="#">Sperm competition</a></li>
+												<li><a href="#">Female mate choice</a></li>
+												<li><a href="#">Sperm exhaustion</a></li>
+												<li><a href="#">XO•XY competition cages</a></li>
+												<li><a href="#">XY•XY experimental evolution cages</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
 										<li>
-											<span class="opener">Another Submenu</span>
+											<span class="opener">Publications</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="#">Y paper</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+										<li><a href="#">Mentoring</a></li>
+										<li><a href="#">Data Carpentries</a></li>
 									</ul>
 								</nav>
 
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Ante interdum</h2>
-									</header>
-									<div class="mini-posts">
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-									</div>
-									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
-									</ul>
-								</section>
-
-							<!-- Section -->
-								<section>
-									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p></p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="icon solid fa-envelope"><a href="#">tdmc253@gmail.com</a></li>
+										<li class="icon solid fa-phone">(785) 766-5128</li>
+										<li class="icon solid fa-home">1200 Sunnyside Ave<br />
+										Lawrence, KS 66046</li>
 									</ul>
 								</section>
 
@@ -254,6 +164,7 @@
 	</body>
 
 </html>
+
 
 
 
