--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
 									<ul class="icons">
-										<li><a href="#" class="fa-brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="fa-brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="fa-brands fa-bluesky"><span class="label">Bluesky</span></a></li>
+										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="#" class="icon brands fa-bluesky"><span class="label">Bluesky</span></a></li>
 									</ul>
 								</header>
 							
@@ -58,14 +58,14 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="image icon fa-dna"></span>
+											<span class="image solid fa-dna"></span>
 											<div class="content">
 												<h3>Evolution</h3>
 												<p>Experimental evolution after the loss of the Y chromosome in a population</p>
 											</div>
 										</article>
 										<article>
-											<span class="image icon fa-desktop"></span>
+											<span class="image solid fa-desktop"></span>
 											<div class="content">
 												<h3>Bioinformatics</h3>
 												<p>Replace</p>
@@ -79,7 +79,7 @@
 											</div>
 										</article>
 										<article>
-											<span class="image icon fa-earth-americas"></span>
+											<span class="image solid fa-earth-americas"></span>
 											<div class="content">
 												<h3>Population genomics</h3>
 												<p>Replace</p>
@@ -164,6 +164,7 @@
 	</body>
 
 </html>
+
 
 
 
