--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="#" class="icon solid fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-bluesky"><span class="label">Bluesky</span></a></li>
+										<li><a href="#" class="icon solid fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="#" class="icon solid fa-bluesky"><span class="label">Bluesky</span></a></li>
 									</ul>
 								</header>
 							
@@ -164,6 +164,7 @@
 	</body>
 
 </html>
+
 
 
 
