--- a/index.html
+++ b/index.html
@@ -58,28 +58,28 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="image solid fa-dna"></span>
+											<span class="icon solid fa-dna"></span>
 											<div class="content">
 												<h3>Evolution</h3>
 												<p>Experimental evolution after the loss of the Y chromosome in a population</p>
 											</div>
 										</article>
 										<article>
-											<span class="image solid fa-desktop"></span>
+											<span class="icon solid fa-desktop"></span>
 											<div class="content">
 												<h3>Bioinformatics</h3>
 												<p>Replace</p>
 											</div>
 										</article>
 										<article>
-											<span class="image icon fa-heart"></span>
+											<span class="icon icon fa-heart"></span>
 											<div class="content">
 												<h3>Fertility</h3>
 												<p>Replace</p>
 											</div>
 										</article>
 										<article>
-											<span class="image solid fa-earth-americas"></span>
+											<span class="icon solid fa-earth-americas"></span>
 											<div class="content">
 												<h3>Population genomics</h3>
 												<p>Replace</p>
@@ -164,6 +164,7 @@
 	</body>
 
 </html>
+
 
 
 
