--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 										</header>
 										<p>replace with a bio?</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">CV</a></li>
+											<li><a href="CV.pdf" class="button big">CV</a></li>
 										</ul>
 									</div>
 									<span class="image object">
@@ -164,6 +164,7 @@
 	</body>
 
 </html>
+
 
 
 
