--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-earth-americas"></span>
+											<span class="icon solid fa-globe"></span>
 											<div class="content">
 												<h3>Population genomics</h3>
 												<p>Replace</p>
@@ -164,6 +164,7 @@
 	</body>
 
 </html>
+
 
 
 
