--- a/index.html
+++ b/index.html
@@ -25,11 +25,24 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<ul class="icons">
+										<li>
+											<a href="https://www.linkedin.com/in/taylorconway2/" class="icon brands fa-linkedin" target="_blank">
+												<span class="label">LinkedIn</span>
+											</a>
+										</li>
+										<li>
+											<a href="https://github.com/ShesCodingOverHere" class="icon brands fa-github" target="_blank">
+												<span class="label">GitHub</span>
+											</a>
+										</li>
+										<li>
+											<a href="https://uncklesslab.com/" class="icon solid fa-flask" target="_blank">
+												<span class="label">Lab Website</span>
+											</a>
+										</li>
+									</ul>
+
 									</ul>
 								</header>
 							
@@ -164,6 +177,7 @@
 	</body>
 
 </html>
+
 
 
 
