--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
 										<li>
 											<span class="opener">Protocols</span>
 											<ul>
-												<li><a href="#">Sperm competition</a></li>
-												<li><a href="#">Female mate choice</a></li>
-												<li><a href="#">Sperm exhaustion</a></li>
-												<li><a href="#">XO•XY competition cages</a></li>
-												<li><a href="#">XY•XY experimental evolution cages</a></li>
+												<li><a href="P1-P2 sperm competition.pdf">Sperm competition</a></li>
+												<li><a href="FemaleMateChoiceProtocol.pdf">Female mate choice</a></li>
+												<li><a href="SpermExhaustionAssay_MaleHealthLongevity.pdf">Sperm exhaustion</a></li>
+												<li><a href="XOvXYcompetitionCages.pdf">XO•XY competition cages</a></li>
+												<li><a href="Experimental evolution protocol.pdf">XY•XY experimental evolution cages</a></li>
 											</ul>
 										</li>
 										<li>
@@ -177,6 +177,7 @@
 	</body>
 
 </html>
+
 
 
 
