--- a/generic.html
+++ b/generic.html
@@ -54,7 +54,7 @@
 									<hr class="major" />
 
 									<h2>Genome assembly and Y chromosome characterization</h2>
-									<p>Here I will write about the Y project. Skills and such.</p>
+									<p>As part of my research on Drosophila affinis, I am assembling the genome and studying the Y chromosome. The Y chromosome is hard to study because it is repetitive and often missing from standard genome assemblies. By comparing DNA from males and females, I work to identify which parts of the genome belong to the Y chromosome and what genes or repeats it contains. This helps us better understand how the Y chromosome is built, how it changes over time, and how it may affect traits like male fertility and the success of XY vs. XO males in populations.</p>
 
 									<hr class="major" />
 
@@ -145,4 +145,5 @@
 	</body>
 
 </html>
+
 
